--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "react-scripts build"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1",
